--- a/src/components/Schedule/Schedule.scss
+++ b/src/components/Schedule/Schedule.scss
@@ -13,7 +13,7 @@
 }
 
 .schedule__subtitle {
-  color: var(--black);
+  color: var(--grey);
   font-family: 'Commissioner';
   font-weight: 400;
   font-size: 16px;
