--- a/src/views/Hero/Hero.scss
+++ b/src/views/Hero/Hero.scss
@@ -1,8 +1,9 @@
 .hero {
-  height: 660px;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 
   @media screen and (max-width: 1024px) {
     flex-direction: row;
@@ -28,7 +29,6 @@
   width: 655px;
   height: 475px;
   margin-right: 5vw;
-  margin-bottom: 0;
 
   @media screen and (max-width: 1280px) {
     margin-right: 0;
@@ -37,16 +37,17 @@
 
   @media screen and (max-width: 1024px) {
     scale: 0.7;
-    margin-bottom: 5vw;
+    bottom: -1vh;
   }
 
   @media screen and (max-width: 768px) {
     scale: 0.55;
-    margin-bottom: 0;
+    bottom: -4vh;
   }
 
   @media screen and (max-width: 380px) {
     scale: 0.45;
+    bottom: -8vh;
   }
 }
 
