--- a/src/views/Hero/Hero.scss
+++ b/src/views/Hero/Hero.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   position: relative;
+  overflow-x: hidden;
 
   @media screen and (max-width: 1024px) {
     flex-direction: row;
@@ -48,6 +49,11 @@
   @media screen and (max-width: 380px) {
     scale: 0.45;
     bottom: -8vh;
+  }
+
+  @media screen and (max-width: 320px) {
+    scale: 0.35;
+    bottom: -18vh;
   }
 }
 
