--- a/src/components/Discount/Discount.scss
+++ b/src/components/Discount/Discount.scss
@@ -18,8 +18,8 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-}
 
-.discount__description-span {
-  color: var(--green);
+  &--span {
+    color: var(--green);
+  }
 }
