--- a/src/views/Introducing/Introducing.scss
+++ b/src/views/Introducing/Introducing.scss
@@ -27,7 +27,7 @@
 .introducing__title {
   color: var(--black);
   font-family: 'Commissioner';
-  font-size: 40px;
+  font-size: 36px;
   font-weight: 500;
   line-height: normal;
 
@@ -57,6 +57,7 @@
 .introducing__img {
   width: 558px;
   height: 558px;
+  object-fit: cover;
 
   @media screen and (max-width: 1024px) {
     width: 448px;
