updated image style

--- a/src/views/Hero/Hero.scss
+++ b/src/views/Hero/Hero.scss
@@ -30,6 +30,7 @@
   width: 655px;
   height: 475px;
   margin-right: 5vw;
+  object-fit: cover;
 
   @media screen and (max-width: 1280px) {
     margin-right: 0;
