--- a/src/views/FAQ/FAQ.scss
+++ b/src/views/FAQ/FAQ.scss
@@ -11,6 +11,10 @@
     margin-bottom: 20px;
     font-size: 32px;
   }
+
+  @media screen and (max-width: 320px) {
+    overflow-x: hidden;
+  }
 }
 
 .faq-row {
