--- a/src/views/Hero/Hero.scss
+++ b/src/views/Hero/Hero.scss
@@ -89,6 +89,11 @@
   @media screen and (max-width: 770px) {
     max-width: 600px;
   }
+
+  @media screen and (max-width: 320px) {
+    font-size: 24px;
+    overflow-x: hidden;
+  }
 }
 
 .hero__subtitle {
